Stretch to height on mobile as well. Fix the calculation of stretch to height.

--- a/src/scss/container.scss
+++ b/src/scss/container.scss
@@ -1,32 +1,4 @@
 .webchat-container {
-	&.webchat-order-ascending {
-		@include oGridRespondTo($until: M) {
-			display: flex;
-			flex-direction: column;
-
-			.webchat-content,
-			.webchat-closed-content {
-				order: 3;
-
-				display: flex;
-				flex-direction: column-reverse;
-			}
-
-			.webchat-editor {
-				order: 2;
-			}
-
-			.webchat-header {
-				order: 1;
-			}
-
-			.webchat-participants {
-				order: 4;
-			}
-		}
-	}
-
-
 	.color-0 {
 		color: #95ef8f;
 	}
