--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,4 +1,8 @@
 .webchat-header {
+	@include oGridRespondTo($until: M) {
+		display: none;
+	}
+
 	.webchat-title {
 		display: none;
 	}
